# Ribofilio

./: .gitignore  README.md  README.rst  citeme_licence  codecov.yml  meta.yaml  noxfile.py  pyproject.toml  requirements.txt  ribofilio.py  setup.cfg  setup.py
.github/workflows/: main.yml
Data/: Makefile
data/: Makefile
datasets/: Makefile
docs/: index.rst  protocol.rst  run.rst  tutorial.rst
logs/: statsD1D3.txt  statsD2D4.txt  statsD5D7.txt  statsD6D8.txt  statsD9D10.txt
notebooks/: D1_Notebook.ipynb  ribofilio_presentation.ipynb
paper/: Makefile  references.bib  ribofilio.tex
paper/supplementary/: ribofilio_supplementary.tex
pipeline/: D3FP_D3mRNA.bins.csv  D4FP_D4mRNA.bins.csv  D7FP_D7mRNA.bins.csv  D8FP_D8mRNA.bins.csv  D9FP_D9mRNA.bins.csv  Makefile  Snakefile  config.yaml  config_D1D3.yaml  config_D1D4.yaml  config_D2D4.yaml  config_D2D5.yaml  config_D3D6.yaml  config_D5D7.yaml  config_D6D8.yaml  config_D7D9.yaml  config_D8D10.yaml  config_D9D10.yaml
pipeline/env/: env-align.yaml  env-cluster.yaml  env-format.yaml  env-go.yaml  env-index.yaml  env-ribo.yaml  env-ttest.yaml
pipeline/scripts/: d1_r.txt  d2_r.txt  d3_r.txt  d4_r.txt  d5_r.txt  d6_r.txt  d7_r.txt  d8_r.txt  figure4.py  figures5.py  gcluster.py  getGO.R  ttest.py
pipeline/src/: getBiomart.R  getGO.R  shuffle.py  stats.py
results/: .gitattributes  D10FP_D10mRNA.bins.csv  D1FP_D1mRNA.bins.csv  D2FP_D2mRNA.bins.csv  D5FP_D5mRNA.bins.csv  D6FP_D6mRNA.bins.csv  D9FP_D9mRNA.bins.csv
results/bins/: D1FP_D1mRNA-GO:0000462.bins.csv  D1FP_D1mRNA-GO:0002181.bins.csv  D1FP_D1mRNA-GO:0003735.bins.csv  D1FP_D1mRNA-GO:0006364.bins.csv  D1FP_D1mRNA-GO:0006406.bins.csv  D1FP_D1mRNA-GO:0006412.bins.csv  D1FP_D1mRNA-GO:0008135.bins.csv  D1FP_D1mRNA-GO:0015935.bins.csv  D1FP_D1mRNA-GO:0030529.bins.csv  D1FP_D1mRNA-GO:0030684.bins.csv  D1FP_D1mRNA-GO:0030686.bins.csv  D1FP_D1mRNA-yeast10002000.bins.csv  D1FP_D1mRNA-yeast20003000.bins.csv  D1FP_D1mRNA-yeast40005000.bins.csv  D3FP_D3mRNA.bins.csv  D4FP_D4mRNA.bins.csv  D6FP_D6mRNA.bins.csv
scripts/: ribofilio.py  ribofilioWLR.py  ribofilioWLRB.py  ribofilioWLRS.py  stats.py
src/: check_bed.py  gcluster.py  ribofilio.py  ribofilioWLRB.py  stats.py
supplementary_materials/bins/: D10FP_D10mRNA-GO:0000462.bins.csv  D10FP_D10mRNA-GO:0000466.bins.csv  D10FP_D10mRNA-GO:0002181.bins.csv  D10FP_D10mRNA-GO:0003723.bins.csv  D10FP_D10mRNA-GO:0003735.bins.csv  D10FP_D10mRNA-GO:0003743.bins.csv  D10FP_D10mRNA-GO:0005840.bins.csv  D10FP_D10mRNA-GO:0006364.bins.csv  D10FP_D10mRNA-GO:0006396.bins.csv  D10FP_D10mRNA-GO:0006406.bins.csv  D10FP_D10mRNA-GO:0006412.bins.csv  D10FP_D10mRNA-GO:0006457.bins.csv  D10FP_D10mRNA-GO:0006950.bins.csv  D10FP_D10mRNA-GO:0007049.bins.csv  D10FP_D10mRNA-GO:0008135.bins.csv  D10FP_D10mRNA-GO:0009651.bins.csv  D10FP_D10mRNA-GO:0015934.bins.csv  D10FP_D10mRNA-GO:0015935.bins.csv  D10FP_D10mRNA-GO:0016458.bins.csv  D10FP_D10mRNA-GO:0022625.bins.csv  D10FP_D10mRNA-GO:0022626.bins.csv  D10FP_D10mRNA-GO:0022627.bins.csv  D10FP_D10mRNA-GO:0022857.bins.csv  D10FP_D10mRNA-GO:0030490.bins.csv  (+397 more)
tests/: sample.bed  test_modules.py  tests.py  transctipts_sample.fa
(+3 files in other folders)
