# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.1.1"
addopts = "-ra -q"
testpaths = [
    "tests"
]


[tool.poetry]
name = "ribofilio"
version = "0.1.0"
description = "A tool to estimate drop-off rate of ribosomes"
authors = ["Sherine Awad, Davide Chiarugi, and Angelo Valleriani"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"
numpy = "^1.20.3"
screed = "^1.0.5"
matplotlib = "^3.4.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
