[tool.poetry]
name = "ribofilio"
version = "0.1.0"
description = "A tool to estimate ribosomes' drop-off rate"
authors = ["Sherine Awad"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"
screed = "^1.0.4"
scikit-learn = "^0.24.2"
scipy = "^1.5.3"
numpy = "^1.19.5"
matplotlib = "^3.2.2"

[tool.poetry.dev-dependencies]
coverage = "^5.3"
flake8 = "^3.8.4"
pytest = "^5.4.3"
opencv-python = "^4.2.0"
scikit-image = "^0.17.2"

[tool.poetry.scripts]
my-script = "ribofilio.ribofilio:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
