[metadata]
name = ribofilio
version = 0.0.0-dev
description = A Python tool to estimate ribosomes' drop-off rate 
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/sherineawad/ribofilio
author = Sherine Awad, Davide Chiarugi, and Angelo Valleriani 
author_email = sherine.awad@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls = 
    Documentation = https://ribofilio.readthedocs.io
    Source = https://github.com/sherineawad/ribofilio
    Tracker = https://github.com/sherineawad/ribofilio/issues

[options]
zip_safe = False
packages_dir =
   =src
packages = find:
scripts =
    src/ribofilio.py
platforms = any
include_package_data = True
python_requires = >=3.7
install_requires =
    screed 
    scipy ==1.5.3
    scikit-learn ==0.24.2
    matplotlib ==3.2.2
    numpy ==1.19.5


[options.packages.find]
where = src

[bdist_wheel]
universal = 1

